--- a/html/index.html
+++ b/html/index.html
@@ -22,6 +22,11 @@
 
 <div ng-controller="MainController as vm">
     <p>{{vm.test}}</p>
+    <div class="row">
+        <div class="col-xs-12">
+            <a class="btn" ng-click="vm.test()">Test</a>
+        </div>
+    </div>
 </div>
 
 <!-- Placed at the end of the document so the pages load faster -->
