--- a/html/index.html
+++ b/html/index.html
@@ -18,13 +18,19 @@
     <![endif]-->
 </head>
 <body>
-<h1>Hello, world!</h1>
 
-<div ng-controller="MainController as vm">
-    <p>{{vm.test}}</p>
+<div>
+    <p>This is outside of the AngularJS-Scope</p>
+    <div>
+        <a href="javascript:callMe()">Something++</a>
+    </div>
+</div>
+
+<div class="container-fluid" ng-controller="MainController as vm">
+    <h1>Hello, world!</h1>
     <div class="row">
         <div class="col-xs-12">
-            <a class="btn" ng-click="vm.test()">Test</a>
+            <a class="btn" ng-click="vm.test()">Make "Request"</a>
         </div>
     </div>
 </div>
@@ -37,6 +43,7 @@
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 <script type="text/javascript" src="../js/achilles.js"></script>
 <script type="text/javascript" src="../js/controllers/main.controller.js"></script>
+<script type="text/javascript" src="../js/independent.js"></script>
 
 </body>
 </html>
