--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>ngAchilles - Proof of Concept</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
@@ -31,6 +31,9 @@
     <div class="row">
         <div class="col-xs-12">
             <a class="btn" ng-click="vm.test()">Make "Request"</a>
+        </div>
+        <div class="col-xs-12">
+            <a class="btn" ng-click="vm.waitForResponse()">Wait for Response</a>
         </div>
     </div>
 </div>
