--- a/html/index.html
+++ b/html/index.html
@@ -50,7 +50,14 @@
                     <ul class="list-group">
                         <li class="list-group-item" ng-repeat="attribute in entry.attributes">
                             <div class="row">
-                                <span class="col-xs-4">{{attribute.name}}:</span><span class="col-xs-8">{{attribute.content}}</span>
+                                <div class="col-xs-4">
+                                    <div ng-hide="attribute.editNameEnabled">
+                                        <a ng-click="attribute.editNameEnabled=!attribute.editNameEnabled">{{attribute.name}}:</a>
+                                    </div>
+                                    <div ng-show="attribute.editNameEnabled">
+                                        <input type="text" ng-model="attribute.name" ng-blur="attribute.editNameEnabled=!attribute.editNameEnabled">
+                                    </div>
+                                </div><span class="col-xs-8">{{attribute.content}}</span>
                             </div>
                         </li>
                     </ul>
