can add a new attribute now

--- a/html/index.html
+++ b/html/index.html
@@ -75,7 +75,9 @@
                             </div>
                         </li>
                     </ul>
-
+                    <div class="btn-group">
+                        <a ng-click="vm.addAttribute(entry)">Neues Feld hinzufügen</a>
+                    </div>
                 </div>
             </div>
             <!--a class="btn" ng-click="vm.test()">Make "Request"</a-->
