--- a/html/index.html
+++ b/html/index.html
@@ -29,6 +29,30 @@
 </div>
 
 <div class="container-fluid" ng-controller="MainController as vm">
+    <h1>Testfunktionen http-Server</h1>
+
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="btn-group">
+                <a class="btn btn-default" ng-click="vm.test()">Get Some F**in JSON</a>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="btn-group">
+                <a class="btn btn-default" ng-click="vm.test1()">Goto Patient</a>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="btn-group">
+                <a class="btn btn-default" ng-click="vm.test2()">Goto Appointments</a>
+            </div>
+        </div>
+    </div>
+
     <h1>Behandlungseinträge</h1>
 
     <div class="row">
@@ -52,25 +76,16 @@
                     <ul class="list-group">
                         <li class="list-group-item" ng-repeat="attribute in entry.attributes">
                             <div class="row">
-                                <div class="col-xs-4">
-                                    <div ng-hide="attribute.editNameEnabled">
-                                        <span ng-click="attribute.editNameEnabled=!attribute.editNameEnabled">{{attribute.name}}:</span>
-                                    </div>
-                                    <div ng-show="attribute.editNameEnabled">
-                                        <input type="text" ng-model="attribute.name"
-                                               ng-blur="attribute.editNameEnabled=!attribute.editNameEnabled">
+                                <div class="col-xs-4 col-sm-3 col-md-2">
+                                    <div>
+                                        <span>{{attribute.name}}:</span>
                                     </div>
                                 </div>
-                                <div class="col-xs-8">
-                                    <div ng-hide="attribute.editContentEnabled" class="well"
-                                         ng-click="attribute.editContentEnabled=!attribute.editContentEnabled">
-                                        <p>{{attribute.content}}</p>
-                                    </div>
-                                    <div ng-show="attribute.editContentEnabled">
-                                        <textarea ng-model="attribute.content"
-                                                  ng-blur="attribute.editContentEnabled=!attribute.editContentEnabled">
-                                        </textarea>
-                                    </div>
+                                <div class="col-xs-8 col-sm-9 col-md-10">
+                                    <treatment-column ng-repeat="column in attribute.columns"
+                                                      content="column.content"
+                                                      width="{{column.width}}"
+                                                      readonly="{{column.readonly}}"></treatment-column>
                                 </div>
                             </div>
                         </li>
@@ -93,6 +108,7 @@
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 <script type="text/javascript" src="../js/achilles.js"></script>
 <script type="text/javascript" src="../js/controllers/main.controller.js"></script>
+<script type="text/javascript" src="../js/directives/treatment.directives.js"></script>
 <script type="text/javascript" src="../js/independent.js"></script>
 
 </body>
