--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../css/custom.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -72,7 +73,21 @@
                         <span class="col-xs-1">{{entry.user}}</span>
                         <span class="col-xs-2"></span>
                         <span class="col-xs-3">F:{{entry.case}}</span>
-                        <span class="col-xs-3"><i class="fa fa-medkit"></i> <i class="fa fa-medkit"></i> <i class="fa fa-medkit"></i></span>
+
+                        <div class="col-xs-3">
+                            <div class="pull-right">
+                                <i context-menu
+                                   data-target="med-menu-{{ $index }}"
+                                   class="fa fa-medkit"></i
+                                        > <i
+                                    context-menu
+                                    data-target="lab-menu-{{ $index }}"
+                                    class="fa fa-line-chart"></i
+                                    > <i
+                                    context-menu
+                                    data-target="doc-menu-{{ $index }}"
+                                    class="fa fa-file-text-o"></i></div>
+                        </div>
                     </h4>
                 </div>
                 <div class="panel-body">
@@ -96,6 +111,68 @@
                     <div class="btn-group">
                         <a ng-click="vm.addAttribute(entry)">Neues Feld hinzufügen</a>
                     </div>
+                </div>
+                <div class="dropdown position-fixed" id="med-menu-{{ $index }}">
+                    <ul class="dropdown-menu" role="menu">
+                        <li>
+                            <a class="pointer" role="menuitem" tabindex="1"
+                               ng-click="1==1">
+                                Medikament hinzufügen
+                            </a>
+                        </li>
+                        <li>
+                            <a class="pointer" role="menuitem" tabindex="2"
+                               ng-click="1==1">
+                                Etwas anderes
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="dropdown position-fixed" id="lab-menu-{{ $index }}">
+                    <ul class="dropdown-menu" role="menu">
+                        <li>
+                            <a class="pointer" role="menuitem" tabindex="1"
+                               ng-click="1==1">
+                                Laborbericht hinzufügen
+                            </a>
+                        </li>
+                        <li>
+                            <a class="pointer" role="menuitem" tabindex="2"
+                               ng-click="1==1">
+                                Etwas anderes
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="dropdown position-fixed" id="doc-menu-{{ $index }}">
+                    <ul class="dropdown-menu" role="menu">
+                        <li>
+                            <a class="pointer" role="menuitem" tabindex="1"
+                               ng-click="1==1">
+                                Dokument hinzufügen
+                            </a>
+                        </li>
+                        <li role="presentation" class="divider"></li>
+                        <li>
+                            <a class="pointer" role="menuitem" tabindex="1"
+                               ng-click="1==1">
+                                Dokument 1
+                            </a>
+                        </li>
+                        <li>
+                            <a class="pointer" role="menuitem" tabindex="1"
+                               ng-click="1==1">
+                                Dokument 2
+                            </a>
+                        </li>
+                        <li role="presentation" class="divider"></li>
+                        <li>
+                            <a class="pointer" role="menuitem" tabindex="2"
+                               ng-click="1==1">
+                                Etwas anderes
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
             <!--a class="btn" ng-click="vm.test()">Make "Request"</a-->
