--- a/html/index.html
+++ b/html/index.html
@@ -36,20 +36,15 @@
 
                         <div class="col-xs-3">
                             <div class="pull-right">
-                                <span class="dropdown" dropdown>
+                                <span class="dropdown"
+                                      dropdown>
                                     <a href class="dropdown-toggle" dropdown-toggle><i class="fa fa-medkit"></i></a>
                                     <ul class="dropdown-menu dropdown-menu-right">
                                         <li><a href>Hallo</a></li>
                                         <li><a href>Welt</a></li>
                                     </ul>
-                                </span>
-                                <i context-menu
-                                        data-target="lab-menu-{{ $index }}"
-                                        class="fa fa-line-chart"></i
-                                        > <i
-                                    context-menu
-                                    data-target="doc-menu-{{ $index }}"
-                                    class="fa fa-file-text-o"></i></div>
+                                </span
+                                        > <i class="fa fa-line-chart"></i> <i class="fa fa-file-text-o"></i></div>
                         </div>
                     </h4>
                 </div>
@@ -75,68 +70,6 @@
                         <a ng-click="vm.addAttribute(entry)">Neues Feld hinzufügen</a>
                     </div>
                 </div>
-                <div class="dropdown position-fixed" id="med-menu-{{ $index }}">
-                    <ul class="dropdown-menu" role="menu">
-                        <li>
-                            <a class="pointer" role="menuitem" tabindex="1"
-                               ng-click="1==1">
-                                Medikament hinzufügen
-                            </a>
-                        </li>
-                        <li>
-                            <a class="pointer" role="menuitem" tabindex="2"
-                               ng-click="1==1">
-                                Etwas anderes
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="dropdown position-fixed" id="lab-menu-{{ $index }}">
-                    <ul class="dropdown-menu" role="menu">
-                        <li>
-                            <a class="pointer" role="menuitem" tabindex="1"
-                               ng-click="1==1">
-                                Laborbericht hinzufügen
-                            </a>
-                        </li>
-                        <li>
-                            <a class="pointer" role="menuitem" tabindex="2"
-                               ng-click="1==1">
-                                Etwas anderes
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="dropdown position-fixed" id="doc-menu-{{ $index }}">
-                    <ul class="dropdown-menu" role="menu">
-                        <li>
-                            <a class="pointer" role="menuitem" tabindex="1"
-                               ng-click="1==1">
-                                Dokument hinzufügen
-                            </a>
-                        </li>
-                        <li role="presentation" class="divider"></li>
-                        <li>
-                            <a class="pointer" role="menuitem" tabindex="1"
-                               ng-click="1==1">
-                                Dokument 1
-                            </a>
-                        </li>
-                        <li>
-                            <a class="pointer" role="menuitem" tabindex="1"
-                               ng-click="1==1">
-                                Dokument 2
-                            </a>
-                        </li>
-                        <li role="presentation" class="divider"></li>
-                        <li>
-                            <a class="pointer" role="menuitem" tabindex="2"
-                               ng-click="1==1">
-                                Etwas anderes
-                            </a>
-                        </li>
-                    </ul>
-                </div>
             </div>
             <!--a class="btn" ng-click="vm.test()">Make "Request"</a-->
         </div>
@@ -149,7 +82,6 @@
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-<script type="text/javascript" src="../bower_components/ng-context-menu/dist/ng-context-menu.js"></script>
 <script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap.js"></script>
 <script type="text/javascript" src="../js/achilles.js"></script>
 <script type="text/javascript" src="../js/controllers/main.controller.js"></script>
