added a workaround for the angular-select2 problem, by adding a toString to each object in the select option list. needs to be reworked to something prettier asap

--- a/html/index.html
+++ b/html/index.html
@@ -54,6 +54,7 @@
                     <ul class="list-group">
                         <li class="list-group-item" ng-repeat="attribute in entry.attributes">
                             <div class="row">
+                                <pre>{{attribute.type|json}}</pre>
                                 <div class="col-xs-4 col-sm-3 col-md-2">
                                     <treatment-type entry="attribute" types="vm.entryTypes">
                                     </treatment-type>
