--- a/html/index.html
+++ b/html/index.html
@@ -31,10 +31,21 @@
             <div class="panel" ng-class="treatment.type=='success' ? 'panel-success' : 'panel-default'">
                 <div class="panel-heading">
                     <h4 class="row">
-                        <span class="col-xs-3">{{treatment.date}}</span>
-                        <span class="col-xs-1">{{treatment.user}}</span>
-                        <span class="col-xs-2"></span>
-                        <span class="col-xs-3">F:{{treatment.case}}</span>
+                        <div class="col-xs-3">
+                            <a class="btn btn-default dropdown-toggle" data-toggle="dropdown" id="dropdown-{{$index}}">{{treatment.date | date:short}}</a>
+                            <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown-{{index}}">
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href ng-click="vm.addTreatment(vm.treatments)">Add...</a></li>
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Another action</a></li>
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Something else here</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-xs-1">
+                            <a class="btn btn-default dropdown-toggle">{{treatment.user}}</a>
+                        </div>
+                        <div class="col-xs-2"></div>
+                        <div class="col-xs-3">
+                            <a class="btn btn-default dropdown-toggle">F:{{treatment.case}}</a>
+                        </div>
 
                         <div class="col-xs-3">
                             <div class="pull-right">
@@ -45,8 +56,7 @@
                                         <li><a href>Hallo</a></li>
                                         <li><a href>Welt</a></li>
                                     </ul>
-                                </span
-                                        > <i class="fa fa-line-chart"></i> <i class="fa fa-file-text-o"></i></div>
+                                </span> <i class="fa fa-line-chart"></i> <i class="fa fa-file-text-o"></i></div>
                         </div>
                     </h4>
                 </div>
@@ -78,6 +88,7 @@
 <script type="text/javascript" src="../js/achilles.js"></script>
 <script type="text/javascript" src="../js/controllers/main.controller.js"></script>
 <script type="text/javascript" src="../js/directives/treatment.directives.js"></script>
+<script type="text/javascript" src="../js/services/utility.services.js"></script>
 <script type="text/javascript" src="../js/independent.js"></script>
 
 </body>
