--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,8 @@
 </head>
 <body>
 <div class="container-fluid" ng-controller="MainController as vm">
-    <treatment treatment="treatment" ng-repeat="treatment in vm.treatments | orderBy:['-date', 'id']" treatmentlist="vm.treatments"></treatment>
+    <treatment treatment="treatment" ng-repeat="treatment in vm.treatments | orderBy:['-date', 'id']"
+               treatmentlist="vm.treatments"></treatment>
 </div>
 
 <!-- Placed at the end of the document so the pages load faster -->
@@ -42,10 +43,12 @@
 <script type="text/javascript" src="../bower_components/angular-select2/dist/angular-select2.min.js"></script>
 <script type="text/javascript" src="../js/achilles.js"></script>
 <script type="text/javascript" src="../js/controllers/main.controller.js"></script>
+<script type="text/javascript" src="../js/controllers/modal.controller.js"></script>
 <script type="text/javascript" src="../js/directives/treatment.directives.js"></script>
 <script type="text/javascript" src="../js/services/utility.services.js"></script>
 <script type="text/javascript" src="../js/services/entry.services.js"></script>
 <script type="text/javascript" src="../js/services/treatment-context.service.js"></script>
+<script type="text/javascript" src="../js/services/subject.service.js"></script>
 <script type="text/javascript" src="../js/independent.js"></script>
 
 </body>
