added another modal, also did some refactoring, added a keypress shortcut (f10)

--- a/html/index.html
+++ b/html/index.html
@@ -43,8 +43,9 @@
 <script type="text/javascript" src="../bower_components/angular-select2/dist/angular-select2.min.js"></script>
 <script type="text/javascript" src="../js/achilles.js"></script>
 <script type="text/javascript" src="../js/controllers/main.controller.js"></script>
-<script type="text/javascript" src="../js/controllers/modal.controller.js"></script>
+<script type="text/javascript" src="../js/controllers/modal.controllers.js"></script>
 <script type="text/javascript" src="../js/directives/treatment.directives.js"></script>
+<script type="text/javascript" src="../js/directives/modal.directives.js"></script>
 <script type="text/javascript" src="../js/services/utility.services.js"></script>
 <script type="text/javascript" src="../js/services/entry.services.js"></script>
 <script type="text/javascript" src="../js/services/treatment-context.service.js"></script>
