--- a/html/index.html
+++ b/html/index.html
@@ -46,10 +46,15 @@
 <script type="text/javascript" src="../js/controllers/modal.controllers.js"></script>
 <script type="text/javascript" src="../js/directives/treatment.directives.js"></script>
 <script type="text/javascript" src="../js/directives/modal.directives.js"></script>
-<script type="text/javascript" src="../js/services/utility.services.js"></script>
+<script type="text/javascript" src="../js/services/url.service.js"></script>
 <script type="text/javascript" src="../js/services/entry.services.js"></script>
 <script type="text/javascript" src="../js/services/treatment-context.service.js"></script>
 <script type="text/javascript" src="../js/services/subject.service.js"></script>
+<script type="text/javascript" src="../js/services/document.service.js"></script>
+<script type="text/javascript" src="../js/services/biometric.service.js"></script>
+<script type="text/javascript" src="../js/services/case.service.js"></script>
+<script type="text/javascript" src="../js/services/disability.service.js"></script>
+<script type="text/javascript" src="../js/services/laboratory.service.js"></script>
 <script type="text/javascript" src="../js/independent.js"></script>
 
 </body>
