--- a/html/index.html
+++ b/html/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="../css/select2-bootstrap.css">
     <link rel="stylesheet" href="../css/custom.css">
 
+    <link rel="stylesheet" href="http://css-spinners.com/css/spinner/spinner.css" type="text/css">
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -23,6 +25,13 @@
     <![endif]-->
 </head>
 <body>
+<div id="loading-overlay">
+    <div class="loading-icon">
+        <div class="spinner">
+            Loading...
+        </div>
+    </div>
+</div>
 <div class="container-fluid" ng-controller="MainController as vm">
     <treatment treatment="treatment" ng-repeat="treatment in vm.treatments | orderBy:['-date', 'id']"
                treatmentlist="vm.treatments"></treatment>
@@ -36,6 +45,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <!--<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>-->
 <script type="text/javascript" src="../bower_components/angular/angular.js"></script>
+<script type="text/javascript" src="../bower_components/angular-resource/angular-resource.js"></script>
 <script type="text/javascript" src="../bower_components/ngLocale/angular-locale_de-ch.js"></script>
 <script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap.js"></script>
 <script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
@@ -55,6 +65,7 @@
 <script type="text/javascript" src="../js/services/case.service.js"></script>
 <script type="text/javascript" src="../js/services/disability.service.js"></script>
 <script type="text/javascript" src="../js/services/laboratory.service.js"></script>
+<script type="text/javascript" src="../js/config/spinner.config.js"></script>
 <script type="text/javascript" src="../js/independent.js"></script>
 
 </body>
