--- a/html/index.html
+++ b/html/index.html
@@ -51,6 +51,7 @@
 <script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script type="text/javascript" src="../bower_components/select2/select2.min.js"></script>
 <script type="text/javascript" src="../bower_components/angular-select2/dist/angular-select2.min.js"></script>
+<script type="text/javascript" src="../bower_components/angular-elastic/elastic.js"></script>
 <script type="text/javascript" src="../js/achilles.js"></script>
 <script type="text/javascript" src="../js/controllers/main.controller.js"></script>
 <script type="text/javascript" src="../js/controllers/modal.controllers.js"></script>
