added key navigation to dropdowns

--- a/html/index.html
+++ b/html/index.html
@@ -63,6 +63,7 @@
 <script type="text/javascript" src="../js/controllers/modal.controllers.js"></script>
 <script type="text/javascript" src="../js/directives/treatment.directives.js"></script>
 <script type="text/javascript" src="../js/directives/modal.directives.js"></script>
+<script type="text/javascript" src="../js/directives/toggle-focus.directive.js"></script>
 <script type="text/javascript" src="../js/services/url.service.js"></script>
 <script type="text/javascript" src="../js/services/entry.services.js"></script>
 <script type="text/javascript" src="../js/services/treatment-context.service.js"></script>
