added case dropdown, some refactoring

--- a/html/index.html
+++ b/html/index.html
@@ -115,12 +115,11 @@
 <script type="text/javascript" src="../js/directives/modal.directives.js"></script>
 <script type="text/javascript" src="../js/directives/toggle-focus.directive.js"></script>
 <script type="text/javascript" src="../js/services/url.service.js"></script>
-<script type="text/javascript" src="../js/services/entry.services.js"></script>
+<script type="text/javascript" src="../js/services/entry-type.service.js"></script>
 <script type="text/javascript" src="../js/services/treatment-context.service.js"></script>
 <script type="text/javascript" src="../js/services/subject.service.js"></script>
 <script type="text/javascript" src="../js/services/document.service.js"></script>
 <script type="text/javascript" src="../js/services/biometric.service.js"></script>
-<script type="text/javascript" src="../js/services/case.service.js"></script>
 <script type="text/javascript" src="../js/services/disability.service.js"></script>
 <script type="text/javascript" src="../js/services/laboratory.service.js"></script>
 <script type="text/javascript" src="../js/config/spinner.config.js"></script>
