refactored the treatment service

--- a/html/index.html
+++ b/html/index.html
@@ -55,7 +55,7 @@
                                 <a class="btn btn-default btn-xs gdt dropdown-toggle" dropdown-toggle>&nbsp;</a>
 
                                 <a class="btn btn-default btn-xs new-treatment"
-                                   ng-click="vm.addTreatment(vm.treatments)">&nbsp;</a>
+                                   ng-click="dc.addTreatment(vm.treatments)">&nbsp;</a>
                                 <a class="btn btn-default btn-xs new-treatment-dialog" href="{{vm.baseUrl}}treatment/">
                                     &nbsp;</a>
                                 <a class="btn btn-default btn-xs biometric-report"
@@ -119,7 +119,7 @@
 <script type="text/javascript" src="../js/directives/treatment-toolbar.directive.js"></script>
 <script type="text/javascript" src="../js/services/url.service.js"></script>
 <script type="text/javascript" src="../js/services/entry-type.service.js"></script>
-<script type="text/javascript" src="../js/services/treatment-context.service.js"></script>
+<script type="text/javascript" src="../js/services/treatment.service.js"></script>
 <script type="text/javascript" src="../js/services/subject.service.js"></script>
 <script type="text/javascript" src="../js/services/document.service.js"></script>
 <script type="text/javascript" src="../js/services/biometric.service.js"></script>
